--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ gemfile:
   - gemfiles/rails_7.1.gemfile
   - gemfiles/rails_7.2.gemfile
   - gemfiles/rails_8.0.gemfile
+  - gemfiles/rails_8.1.gemfile
 
 jobs:
   fast_finish: true
@@ -25,4 +26,6 @@ jobs:
       gemfile: gemfiles/rails_7.2.gemfile
     - rvm: 3.3.5
       gemfile: gemfiles/rails_8.0.gemfile
+    - rvm: 3.3.5
+      gemfile: gemfiles/rails_8.1.gemfile
 
